--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-auth-boilerplate",
+  "name": "react-auth-template",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
