--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
-  "name": "react-auth-template",
+  "name": "create-react-auth-boilerplate",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-   "bin": {
-    "create-yourapp": "bin/index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "description": "A CLI tool to quickly scaffold React projects with various opinionated boilerplates.",
+  "main": "bin/index.js",
   "type": "module",
+  "bin": {
+    "create-react-boilerplate": "./bin/index.js"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node bin/index.js"
+  },
+  "keywords": [
+    "react",
+    "boilerplate",
+    "cli",
+    "vite",
+    "auth",
+    "redux",
+    "swr",
+    "nextjs"
+  ],
+  "author": "Emydev <alphaoseghe@gmail.com>",
+  "license": "MIT",
   "dependencies": {
-    "chalk": "^5.4.1",
-    "execa": "^9.6.0",
-    "fs-extra": "^11.3.0",
+    "chalk": "^5.0.0",
+    "fs-extra": "^11.0.0",
     "prompts": "^2.4.2"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
